added new scripts

--- a/milestoneReports/generic_nf_milestone_report.Rmd
+++ b/milestoneReports/generic_nf_milestone_report.Rmd
@@ -1,15 +1,15 @@
 ---
 title: "NF-OSI milestone report"
 date: '`r Sys.Date()`'
-output: 
+output:
   html_document:
     theme: cerulean
     toc_depth: 3
     toc_float: yes
-    
-params: 
+
+params:
   projectid: NA
-  projectname: "No Project" 
+  projectname: "No Project"
   fvid: NA
   milestone: 6
 ---
@@ -32,7 +32,7 @@ synLogin()
 We collected the data promised as part of the [NTAP Milestone Report Survey](https://www.synapse.org/#!Synapse:syn11646002/tables/) with the data in your [Synapse Project](https://www.synapse.org/#Synapse:`r projectid`) for `r milestone`  month milestone and found the following results:
 
 ```{r, include = FALSE}
-### submitted milestones 
+### submitted milestones
 ### syn11646002
 surv_id='syn11646002'
 query=paste('SELECT * from',surv_id,'WHERE ( ( "Milestone (months)" =',milestone,'))')
@@ -42,38 +42,8 @@ deliverables_survery <- na.omit(deliverables_survery)
 
 
 ```{r, include = FALSE}
-###NTAP project view
-### syn10147576
-#test_name <- unique(deliverables_survery$`Project Name`)[4] #!!!!!! Change the index to grab different projects!
-# query <- paste0("select id from syn10147576 where name = '", test_name,"'")
-# 
-# test_name_id <- synTableQuery(query)$asDataFrame()
-# 
-# test_parent_id <- test_name_id$id
-# test_getchildren <- synGetChildren(test_parent_id, includeTypes=list( "entityview"), sortBy="NAME", sortDirection="ASC")
-# 
-# test <- test_getchildren$asList()
-# if (test[[1]]$name == "Project Files and Metadata") {
-#   test_fileview_id <- test[[1]]$id
-# }
-# 
-# ###get synID of the 6mo objectives folder
-# test_getchildren <- synGetChildren(test_parent_id, includeTypes=list( "folder"), sortBy="NAME", sortDirection="ASC")
-# test <- test_getchildren$asList()
-# # get data folder id then search subfolders
-# test_folder_id <- test[[1]]$id
-# test_getchildren <- synGetChildren(test_folder_id, includeTypes=list( "folder"), sortBy="NAME", sortDirection="ASC")
-# test <- test_getchildren$asList()
-# 
-# 
-# for (i in seq_along(test) ) {
-#   if (test[[i]]$name == "6 month deliverables") {
-#     print(test[[i]]$name)
-#     six_mo_id <- test[[i]]$id
-#   }
-# }
 
-query <- paste0("select * from ",  fvid, " where projectId = '",projectid,"' and reportMilestone = '", milestone, "'")
+query <- paste0("select * from ",  fvid, " where projectId = '",projectid,"' and resourceType = 'experimentalData' and reportMilestone = '", milestone, "'")
 six_mo_fileview <- synTableQuery(query)$asDataFrame()
 ```
 
@@ -93,15 +63,15 @@ if(nrow(test_name_deliverables)==0){
 }
 
 #get first assay listed (brightfield microscopy )
-six_mo_brightfield <- subset(six_mo_fileview, six_mo_fileview$assay == test_name_deliverables$Assay) 
+six_mo_brightfield <- subset(six_mo_fileview, six_mo_fileview$assay == test_name_deliverables$Assay)
 
 if(nrow(six_mo_brightfield)==0){
   colnames(test_name_deliverables)[6] <- "Proposed number of samples"
   test_name_deliverables$`Actual number of samples` <- 0
-  
+
 }else if ( !is.na(six_mo_brightfield$isMultiSpecimen)) { #for multispecimen samps
   test <- subset(six_mo_brightfield, specimenID != "NA")
-  
+
   counter = 0
   for (i in seq_along(test$specimenID)) {
     # print(i)
@@ -111,10 +81,10 @@ if(nrow(six_mo_brightfield)==0){
     print(length(nums))
     counter = counter + length(nums)
   }
-  ### how many specimen IDs there are seperated by commas only though 
+  ### how many specimen IDs there are seperated by commas only though
   colnames(test_name_deliverables)[6] <- "Proposed number of samples"
   test_name_deliverables$`Actual number of samples` <- counter
-  
+
 } else{
   counter <- length(six_mo_brightfield$dataType)
   colnames(test_name_deliverables)[6] <- "Proposed number of samples"
@@ -126,9 +96,9 @@ if(nrow(six_mo_brightfield)==0){
 #### `r milestone` Month Milestones Table
 ```{r, echo = FALSE}
 library(DT)
-datatable(test_name_deliverables[,-c(1,2)], 
-          class = 'cell-border stripe', 
-          rownames= FALSE, filter = 'top', 
+datatable(test_name_deliverables[,-c(1,2)],
+          class = 'cell-border stripe',
+          rownames= FALSE, filter = 'top',
           caption = paste("Table 1: This shows the proposed number of samples by the NTAP Milestone Report Survey and compares it to the number of samples in the",milestone," month deliverables "))
 ```
 
@@ -139,7 +109,7 @@ df <- melt(test_name_deliverables[,-c(1,2)])[-1,]
 df$variable <- factor(df$variable, levels = df$variable)
 ```
 
-####`r milestone` Month Milestones Graph
+#### `r milestone` Month Milestones Graph
 ```{r, warning=FALSE, echo = FALSE}
 library(ggplot2)
 ```
@@ -148,7 +118,4 @@ library(ggplot2)
 ggplot(df, aes(x=variable, y=value)) + geom_bar(stat="identity", aes(fill = variable)) + scale_fill_manual(values= c('#93C3DC','#5A478F')) + ylab("Number of Samples")+ xlab("") + ggtitle(paste(milestone,"Month Milestone report for",projectname)) + guides(fill=FALSE) + theme_minimal()
 ```
 
-This graph shows the proposed number of samples from the milestone report in blue and the actual number of samples found in the `r milestone` month deliverables folder in purple. 
-
-
-
+This graph shows the proposed number of samples from the milestone report in blue and the actual number of samples found in the `r milestone` month deliverables folder in purple.
